# task_2segments

./: CMakeLists.txt  readme.md
scr/: main.cpp
scr/geometryLib/: geometry.cpp
scr/geomlib/: geometry.cpp  geometry.h
scr/segmentLib/: Segment3D.cpp  Segment3D.h
scr/tests/: geometry_unittests.cpp  main.cpp
scr/vectorLib/: Vector3D.cpp  Vector3D.h
